--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "19.2.3",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
