--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@types/react": "^19",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   },
   "prettier": {
     "semi": true,
